# notify

./: .gitignore  Cargo.toml  README.md  metadata.json
api/: notify:gloria-in-excelsis-deo.os-v0.wit  notify:tantum-ergo-dot-os-v0.wit
notify/: Cargo.toml
notify/src/: ICON  lib.rs  types.rs  widget.rs
pkg/: manifest.json
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: CreateTestNotif.tsx  Home.tsx  NotifCard.tsx  NotifsList.tsx  Settings.tsx  TabBar.tsx
ui/src/store/: notifyStore.ts
