[package]
name = "notify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[dependencies.uuid]
version = "1.9.1"
features = [
  "v4", # Lets you generate random UUIDs
]

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
